--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "ejs": "^2.5.3",
     "jquery": "^3.1.1",
     "jsx-loader": "^0.13.2",
